[package]
authors = ["OKP4"]
description = "Little tool to generate json configuration for periodic vesting with cliff."
edition = "2021"
license-file = "LICENSE"
name = "vesting_generator"
readme = "README.md"
repository = "https://github.com/okp4/vesting-generator"
version = "0.1.0"

[dev-dependencies]
abscissa_core = { version = "0.6.0", features = ["testing"] }
once_cell = "1.2"

[dependencies]
abscissa_core = { version = "0.6.0" }
clap = "3"
serde = { version = "1", features = ["serde_derive"] }
serde_derive = "1"
serde_json = "1"
thiserror = "1"
