[package]
authors = ["OKP4"]
description = "A set of cosmos tools utilities for developing cosmos blockchain"
edition = "2021"
license-file = "LICENSE"
name = "cosmos_tools"
readme = "README.md"
repository = "https://github.com/okp4/cosmos-tools"
version = "0.1.0"

[dev-dependencies]
abscissa_core = { version = "0.6.0", features = ["testing"] }
once_cell = "1.19"

[dependencies]
abscissa_core = { version = "0.6.0" }
clap = "3"
serde = { version = "1", features = ["serde_derive"] }
serde_derive = "1"
serde_json = "1"
thiserror = "1"
